--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<a class="twitter-timeline" href="https://twitter.com/ArmstrongTaran/lists/updates?ref_src=twsrc%5Etfw">A Twitter List by ArmstrongTaran</a> 
+<a class="twitter-timeline" data-theme="dark" href="https://twitter.com/ArmstrongTaran/lists/updates?ref_src=twsrc%5Etfw">A Twitter List by ArmstrongTaran</a> 
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
