--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-<a class="twitter-timeline" data-theme="dark" href="https://twitter.com/ArmstrongTaran/lists/updates?ref_src=twsrc%5Etfw">A Twitter List by ArmstrongTaran</a> 
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</body>
+  <head> </head>
+  <body style="background-color: rgba(0, 0, 0, 0.8)">
+    <a
+      class="twitter-timeline"
+      data-theme="dark"
+      data-width="400"
+      data-chrome="nofooter noborders transparent"
+      href="https://twitter.com/ArmstrongTaran/lists/updates?ref_src=twsrc%5Etfw"
+      style="border-style: none; width: 100%; height: 120px"
+      >A Twitter List by ArmstrongTaran</a
+    >
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
+  </body>
 </html>
